--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Kevin</title>
     </head>
     <body>
-        <p>This is Kevin's WebSite.</p>
+        <p>This is Kevin's WebSites.</p>
+        <?php echo "Hello"?>
     </body>
 </html>
