--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <p>This is Kevin's WebSites.</p>
-        <?php echo "Hello"?>
+        <?php echo "Hello world!"; ?>
     </body>
 </html>
