--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Kevin</title>
     </head>
     <body>
-        <p>This is Kevin's WebSites.</p>
+        <p>This is Kevin's WebSite.</p>
         <?php echo "Hello world!"; ?>
     </body>
 </html>
