--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Kevin</title>
     </head>
     <body>
+        <--! Adrian is gay -->
         <p>This is Kevin's WebSite.</p>
         <?php echo "Hello world!"; ?>
     </body>
