--- a/index.html
+++ b/index.html
@@ -2,10 +2,17 @@
 <html>
     <head>
         <title>Kevin</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     </head>
     <body>
         <!-- Adrian is gay -->
-        <p>This is Kevin's WebSite.</p>
+        <div class="jumbotron text-center">
+            <p>This is Kevin's WebSite.</p>
+        </div>
         <?php echo "Hello world!"; ?>
     </body>
 </html>
