--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         <div class="jumbotron text-center">
             <p>This is Kevin's WebSite.</p>
         </div>
+        
         <?php echo "Hello world!"; ?>
+        
+        <button ="alert('Hello')">Click me.</button>
     </body>
 </html>
