--- a/index.html
+++ b/index.html
@@ -14,8 +14,23 @@
             <p>This is Kevin's WebSite.</p>
         </div>
         
-        <?php echo "Hello world!"; ?>
-        
-        <button ="alert('Hello')">Click me.</button>
+        <h1>The XMLHttpRequest Object</h1>
+
+<p id="demo">Let AJAX change this text.</p>
+
+<button type="button" onclick="loadDoc()">Change Content</button>
+
+<script>
+function loadDoc() {
+  var xhttp = new XMLHttpRequest();
+  xhttp.onreadystatechange = function() {
+    if (this.readyState == 4 && this.status == 200) {
+      document.getElementById("demo").innerHTML = this.responseText;
+    }
+  };
+  xhttp.open("GET", "ajax_info.txt", true);
+  xhttp.send();
+}
+</script>
     </body>
 </html>
