--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <script>
             $(document).ready(function()
             {
-                $("p").click(function()
+                $("button").click(function()
                 {
                     $(this).hide();
                 });
