--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         
         <?php
             $connection_database = mysqli_connect(
-                "localhost",                            /* Location */
+                "territorios.000webhostapp.com",        /* Location */
                 "id4748912_database_username_login",    /* Username */
                 "login123",                             /* Password */
                 "id4748912_database_login" );           /* Database */
